IDLER: supported new endpoints for swagger
