# docs/swagger.yaml
@@ -60,11 +60,39 @@ info:
   title: Idler Application
   version: "1.0"
 paths:
+  /user:
+    get:
+      consumes:
+      - application/json
+      description: gets all users
+      operationId: allUsers
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.UserDTO'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/http.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/http.errorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Users
+      tags:
+      - user
   /user/{email}:
     get:
       consumes:
       - application/json
-      description: get user by email
+      description: gets user by email
       operationId: userByEmail
       parameters:
       - description: User email
@@ -96,7 +124,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: get current profile user
+      description: gets current profile user
       operationId: currentUser
       produces:
       - application/json
